<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.rocketjourney.controlcenterrocketjourney.login.LoginActivity">

    <include
        android:id="@+id/componentToolbar"
        layout="@layout/component_toolbar_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutClubNamespace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextClubNamespace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/club_namespace"
                android:lines="1"
                android:singleLine="true"
                android:textColor="@color/white_ff"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textColor="@color/white_ff"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/white_ff">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editTextClubPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white_ff"
                android:textSize="18sp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/buttonForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="6dp"
            android:layout_marginRight="12dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserratregular"
            android:gravity="center_horizontal"
            android:paddingTop="6dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/yellow_ff"
            android:textSize="16sp" />
    </LinearLayout>
</LinearLayout>
